# simple-pokedex

./: .env.example  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  requirements-test.txt  vitest.config.ts
.cursor/rules/: feature-testing-workflow.mdc  nextjs-app-router.mdc  pokeapi-data-layer.mdc  project-overview.mdc  python-testing.mdc  react-component-patterns.mdc  tailwind-styling.mdc  versioning.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-deploy.yml  ci.yml  release.yml  rollback.yml
app/: engine.py  evolution_utils.py  generation_resolver.py  globals.css  layout.tsx  page.tsx  utils.py  variant_utils.py
app/privacy/: page.tsx
app/terms/: page.tsx
components/: AbilityModal.tsx  EvolutionChain.tsx  Footer.tsx  GenerationSelector.tsx  PokemonCard.tsx  SearchBar.tsx  SpriteGallery.tsx  TypeBadge.tsx  WeaknessGrid.tsx
contexts/: GenerationContext.tsx  PokemonContext.tsx
docs/: SRS.md  STP.md
lib/: constants.ts  evolution-utils.ts  frlg-pokemon.ts  frlg-type-overrides.ts  generation-resolver.ts  pokeapi.ts  typeEffectiveness.ts  variant-utils.ts
lib/__tests__/: constants.test.ts  pokeapi.test.ts  typeEffectiveness.test.ts
tests/: conftest.py
tests/e2e/: test_ability_modal.py  test_error_handling.py  test_evolution_chain.py  test_generation_filter.py  test_generation_selector.py  test_legal_pages.py  test_pokemon_display.py  test_regional_variants.py  test_responsive_layout.py  (+5 more)
(+12 files in other folders)
